--- a/sales-aggregator/.project
+++ b/sales-aggregator/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>sales-aggregater</name>
-	<comment>Project sales-aggregater created by Buildship.</comment>
+	<name>sales-aggregator</name>
+	<comment>Project sales-aggregator created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
