--- a/aggregate-core/build.gradle
+++ b/aggregate-core/build.gradle
@@ -16,8 +16,8 @@ dependencies {
     compile 'ch.qos.logback:logback-classic:1.2.3'
     compile 'com.google.guava:guava:25.1-jre'
     compile 'org.springframework:spring-context:5.0.0.RELEASE'
+    compile 'org.codehaus.groovy:groovy-all:2.4.15'
 
-    testCompile 'org.codehaus.groovy:groovy-all:2.4.15'
     testCompile 'org.spockframework:spock-core:1.1-groovy-2.4'
     testCompile 'junit:junit:4.12'
 }
