--- a/sales-aggregator/build.gradle
+++ b/sales-aggregator/build.gradle
@@ -15,9 +15,9 @@ repositories {
 dependencies {
     compile 'com.google.guava:guava:23.0'
     compile 'org.springframework:spring-context:5.0.0.RELEASE'
+    compile 'org.codehaus.groovy:groovy-all:2.4.15'
     compile project(':aggregate-core')
 
-    testCompile 'org.codehaus.groovy:groovy-all:2.4.15'
     testCompile 'org.spockframework:spock-core:1.1-groovy-2.4'
     testCompile 'junit:junit:4.12'
 }
